@@ -1,2 +1,7 @@
 # to-do-list
 https://youtu.be/Qm1GJPpOkE0 - demonstration of app in action
+
+to run the app on linux you need to have JavaFX SDK downloaded (19 the best), then
+download the repository and type in terminal:
+java --module-path /full/path/to/your/javafx-sdk-19/lib --add-modules javafx.controls,javafx.fxml -jar 
+/full/path/to/ToDoList/out/artifacts/ToDoList_jar/ToDoList.jar
